[tool.poetry]
name = "fw-gear-dicom-send"
version = "2.1.1"
description = ""
authors = ["Flywheel <support@flywheel.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pydicom = "^2.3.0"
backoff = "^1.11.1"
flywheel-gear-toolkit = "^0.6.1"
fw-core-client = "^1.1.0"
fw-file = "^1.3.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pylint = "^2.13.4"
pycodestyle = "^2.8.0"
pydocstyle = "^6.1.1"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
